# notes

./: meson.build
src/: lexer.hpp  lexer.rl  main.cpp  meson.build  sqlite.hpp  tcurl.hpp
t/: meson.build  test.cpp
